:recycle: style: text on swagger doc
